# fastapi-and-react-example

./: .gitignore  .gitmodules  README.md
.devcontainer/: create.sh  devcontainer.json
api/: pyproject.toml
api/api/: main.py
sample-spa/: .eslintrc.js  package.json  tsconfig.eslint.json
sample-spa/src/: App.tsx  reportWebVitals.ts
sample-spa/src/components/: AllItem.tsx  FindItem.css  FindItem.tsx  InputId.tsx  Items.tsx  SelectType.tsx  SingleItem.tsx
